# AudioTranscriptionTool

./: .gitignore  LICENSE  Readme.md  launch.bat  pyproject.toml  requirements.txt  requirements_macos.txt  requirements_windows.txt  setup_macos.sh  tmpclaude-3d37-cwd  transcribe.py  transcribe_gui.py  transcribe_gui.spec  transcribe_gui_macos.py
src/: transcribe_gui.py
tests/: test_transcription.py
tmp/: test_api.py  test_mic.py  test_transcribe.py
transcriptions/: do_we_need_20240720.txt  driving_petsley_how_20240720.txt  hey_this_is_20240720.txt  testing_1_2_20240720.txt  using_the_audio_20240720.txt
