[project]
name = "audio-transcription-tool"
version = "2.0.0"
description = "Real-time audio transcription with OpenAI, Groq, and Gemini support"
requires-python = ">=3.10,<3.14"
dependencies = [
    "keyboard>=0.13.5",
    "groq>=0.4.0",
    "openai>=1.12.0",
    "pyaudio>=0.2.13",
    "pyperclip>=1.8.2",
    "pystray>=0.19.4",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pyautogui>=0.9.54",
    "google-generativeai>=0.3.0",
    "torch>=2.0.0; platform_system == 'Windows'",
    "onnxruntime>=1.23.1",
    "deepgram-sdk>=3.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
